# fun-with-machine-learning

./: .gitignore  README.md  lp_norm.py  pyproject.toml  svd.py
analysis/: pdp_and_ice.ipynb  select_optimal_lambda.py
autoencoder/: loss.py  mnits_problem.py  optimizer.py  show_results.py  train.py
convolutional_network/: data.py  load_cifar10.sh  show.py  train_symmetry.py
decomposition/: lda.py  lda_example.ipynb  pca.py  svd.py
denoising_autoencoder/: data.py  denoising autoencoders.ipynb
k_nearest_neighbors/: knn.py
knn/: knearest.py
lenet/: lenet.ipynb
lin_model/: gradient_descent.py  log_reg.ipynb
linear-regression/: bias_variance_analysis.py  linear-regression-normal-eq.py  linear-regression-normal-equation.py  normal_equation.py  select_optimal_lambda.py
matrix/: matrix.py
neural_network/: README.md  layers.py  loss.py  mnist_problem.py  mnits_problem.py  network.py  train.py  xor_problem.py
nlp/: tfidf.py
nn/: gradient_descent.py
preprocessing/: differential_evolution.py
pytorch/: performance.py
tensorflow/: log_reg.ipynb  neural_net.ipynb
timeseries/: cross_val_score_optimization.py  smoothing.py
