[tool.poetry]
name = "fun-with-machine-learning"
version = "0.1.0"
description = ""
authors = ["Dmitry Sysoev"]

[tool.poetry.dependencies]
python = ">=3.7.1"
pandas = "^1.3.3"
scikit-learn = "^1.0"
nltk = "^3.6.6"

[tool.poetry.dev-dependencies]
matplotlib = "^3.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
